TFP-5968: Filtrerer ut oppgaver som er flyttet til gosys (#2558)